<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.beginurrevolutionnow.burn.LoginActivity">

    <ImageView
        android:id="@+id/logologin"
        android:layout_width="wrap_content"
        android:layout_height="106dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/logologin"
        android:src="@drawable/burnlogo2"
        app:layout_constraintBottom_toTopOf="@+id/sloganlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sloganlogin"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginBottom="380dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/burnslogan"
        android:textColor="@color/colortextdark"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logologin" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sloganlogin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingBottom="17dp"
            android:paddingTop="17dp"
            android:text="@string/signup"
            android:textSize="23sp"
            android:textColor="@color/colortextlight"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="17dp"
            android:paddingTop="17dp"
            android:text="@string/signin"
            android:textSize="23sp"
            android:textColor="@color/colortextlight"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="231dp"
        android:layout_height="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:text="@string/phraselogin"
        android:textAlignment="center"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:textColor="@color/colortextdark"/>



</android.support.constraint.ConstraintLayout>
